<resources>
    <string name="app_name">PhotoTree</string>
    <string name="action_settings">Settings</string>
    <string name="line">line</string>
    <string name="title">タイトル</string>
    <string name="save">保存</string>
    <string name="cancel">キャンセル</string>
    <string name="textview">TextView</string>
    <string name="memo">メモ:</string>
    <string name="photoMemo">photoMemo</string>
    <string name="date">日付:</string>
    <string name="select">選択</string>
    <string name="none">選択してください</string>
    <string name="PhotoDate">photoDate</string>
    <string name="image">画像:</string>
    <string name="clipTop">clipTop</string>
    <string name="clipBody">clipBody</string>
    <string name="imgPhotoImage">imgPhotoImage</string>
    <string name="folders">フォルダ一覧</string>
    <string name="title_limit">タイトル: (15文字以下)</string>
    <string name="time">時間:</string>
    <string name="PhotoTime">photoTime</string>
    <string name="Delete">削除</string>
    <string name="doted_line">doted_line</string>
</resources>
