<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/photoColumn"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginBottom="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/clipTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-1dp"
            android:contentDescription="@string/clipBody"
            app:srcCompat="@drawable/ic_clip_top" />

        <ImageView
            android:id="@+id/clipBody"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/clipTop"
            app:srcCompat="@drawable/ic_clip_body" />

    </LinearLayout>

    <TextView
        android:id="@+id/txtPhotoDate"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        android:text="@string/PhotoDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgPhotoImage"
        android:layout_width="match_parent"
        android:layout_height="158dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/imgPhotoImage"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/txtPhotoMemo"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/photoMemo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgPhotoImage" />

</androidx.constraintlayout.widget.ConstraintLayout>